# blog.poisson.chat

./: .gitignore  404.html  LICENSE  README.md  coqfilter.py  index.html  lysxia.cabal  my-server.sh  site.hs  stack.yaml  topics.html
css/: default.css
data/: haskell.xml
posts/: 2016-09-28-parser-printer-lens.rst  2016-10-06-incremental-updates.rst  2016-10-12-bidirectional-serialization.rst  2016-10-13-more-bidirectional-serialization.rst  2016-10-17-monadic-example.rst  2016-10-18-typeclass-interface.rst  2016-10-19-another-typeclass-interface.rst  2016-10-20-stream-example.rst  2016-10-28-lookaheads.rst  2016-11-02-applicative-lenses.rst  2016-12-23-applicative-style.rst  2017-01-01-monadic-profunctors.rst  2017-01-04-reader-writer.rst  2017-03-01-enumerating-dfs.rst  2017-03-04-splittable-generators.rst  2017-04-22-self-injective-arrows.rst  2017-05-24-canonical-testing.rst  2017-05-28-free-monad-transformers.rst  2017-06-07-canonical-testing.rst  2017-06-29-terminal-monomorphization.rst  2017-10-06-cuzz.rst  2017-10-08-aeson-perf.rst  2017-10-21-making-a-show.rst  2018-01-05-generic-random-tour.md  2018-03-03-deriving-show-hkt.md  2018-03-28-generic-data.md  2018-04-26-pipes-free-monad.md  2018-06-06-hlists-dependent-haskell.md  2018-07-08-deriving-twist.md  2018-07-09-type-gadt.md  2018-08-06-one-type-family.md  2018-09-29-overloaded-families.md  2018-11-26-type-surgery.md  2018-12-09-naming-abstraction.md  2019-01-09-hiding-literate-haskell-blocks.md  2019-01-14-cpp19-from-c-to-itrees.md  2019-03-25-higher-rank-types.md  2019-04-03-system-f-in-coq.md  (+22 more)
(+19 files in other folders)
