name:                lysxia
version:             0.1.0.0
synopsis:            Lysxia's blog
description:         Rambling about whatever I am working on.
homepage:            https://lysxia.github.io/
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable lysxia
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:
    hakyll,
    pandoc >= 2.0,
    skylighting,
    megaparsec,
    base
